--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body {
+  min-width: 320px;
   margin: 0;
   padding: 0;
   font-size: 15px;
@@ -6,14 +7,40 @@ body {
   font-weight: 400;
   color: #000000;
   background-color: #ffffff;
+}
 
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 a {
   text-decoration: none;
 }
 
+.page-header__wrapper {
+  display: flex;
+  flex-direction: row;
+}
+
 .main-nav {
+  width: 320px;
+  margin: 0 auto;
   font-size: 15px;
   line-height: 20px;
   color: #333333;
@@ -35,6 +62,24 @@ a {
   transition: 0.3s;
 }
 
+@media (min-width: 750px;) {
+  .main-nav {
+    width: auto;
+    margin: 0;
+  }
+
+  .main-nav__wrapper {
+   display: flex;
+   justify-content: space-between;
+   width: 640px;
+   margin: 0 auto;
+ }
+
+ .site-list {
+   width: 570px;
+ }
+}
+
 .page-header__logo {
   display: block;
   width: 64px;
@@ -42,12 +87,20 @@ a {
 }
 
 .order {
-  background-color: #D62323;
   color: #ffffff;
 }
 
 .order__wrapper {
+  min-width: 320px;
+  min-height: 528px;
+  background-image: url("../img/header-img.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
 
+.order__container {
+  background-color: #D62323;
 }
 
 .order__title {
