--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ a {
   justify-content: space-between;
   width: 320px;
   margin: 0 auto;
+  padding: 16px 0;
 }
 
 .main-nav {
@@ -46,10 +47,42 @@ a {
   line-height: 20px;
   color: #333333;
   background-color: #ffffff;
+  position: relative;
+}
+
+.main-nav__toggle {
+  position: absolute;
+  top: 20px;
+  right: -44px;
+  z-index: 2;
+  display: block;
+  width: 30px;
+  height: 25px;
+  background-color: #ffffff;
+  cursor: pointer;
+  border: none;
+}
+
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 4px;
+  left: 2px;
+  width: 25px;
+  height: 2px;
+  background-color: #575757;
+  box-shadow: 0 8px 0 0 #575757, 0 16px 0 0 #575757;
+}
+
+.main-nav--closed .main-nav__toggle:active::before {
+  background-color: rgba(0, 0, 0, 0.3);
+  box-shadow: 0 8px 0 0 rgba(0, 0, 0, 0.3), 0 16px 0 0 rgba(0, 0, 0, 0.3);
 }
 
 .main-nav__list {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .main-nav__link {
@@ -66,7 +99,25 @@ a {
 .page-header__person {
   width: 20px;
   height: 20px;
-  background-color: black;
+  background-color: #ffffff;
+  position: relative;
+  display: block;
+  top: 23px;
+  left: -14px;
+}
+
+.user-list__login-icon {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 17px;
+  height: 20px;
+}
+
+@media (max-width: 749px) {
+  .main-nav--closed .site-list__item {
+    display: none;
+  }
 }
 
 @media (min-width: 750px) {
@@ -104,6 +155,7 @@ a {
   display: block;
   width: 64px;
   height: 64px;
+  padding-left: 19px;
 }
 
 .order {
@@ -121,11 +173,16 @@ a {
 
 .order__container {
   background-color: #D62323;
-  width: 320px;
+  width: auto;
   margin: 0 auto;
   padding-bottom: 50px;
   position: relative;
   top: 304px;
+}
+
+.order__title-container {
+  width: 300px;
+  margin: 0 auto;
 }
 
 .order__title {
@@ -134,7 +191,6 @@ a {
   font-weight: bold;
   margin: 0;
   margin-bottom: 15px;
-  padding-left: 16px;
   padding-top: 32px;
 }
 
