--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@ a {
   display: block;
   top: 23px;
   left: -14px;
+  font-size: 0;
 }
 
 .user-list__login-icon {
@@ -170,6 +171,8 @@ a {
     top: 9px;
     left: 255px;
   }
+
+
   .page-header__person {
     top: 0;
   }
@@ -177,13 +180,46 @@ a {
 
 
 @media (min-width: 960px) {
+  .page-header__wrapper {
+    width: 650px;
+    padding: 0;
+  }
   .main-nav__wrapper {
     width: 960px;
   }
 
-  .site-list {
-    width: 780px;
+  .main-nav__list {
+    width: 650px;
   }
+
+  .page-header__logo {
+    left: 305px;
+  }
+
+  .page-header__person {
+    width: 80px;
+    padding: 0 21px;
+    padding-bottom: 0;
+    padding-left: 49px;
+    line-height: 18px;
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 15px;
+    left: -170px;
+  }
+  .site-list__item {
+    display: block;
+    padding: 26px 10px;
+  }
+  .page-main__columns {
+    width: 1200px;
+    display: flex;
+    margin: 0 auto;
+  }
+  .page-main__columns--left {
+    width: 960px;
+  }
+
 }
 
 .order {
@@ -300,13 +336,21 @@ a {
 }
 
 @media (min-width: 660px) {
+  .categories__list-wrapper {
+    width: auto;
+    border-bottom: 1px solid #E8EAED;
+  }
+
   .categories__list {
     width: 640px;
+    height: 100px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
     flex-wrap: wrap;
+    padding: 0;
+    padding-top: 35px;
   }
 }
 
@@ -331,11 +375,10 @@ a {
 .catalog__list {
   list-style: none;
   padding: 0;
-}
-.catalog__item {
   width: 300px;
   margin: 0 auto;
 }
+
 .catalog__item-image {
   display: block;
   text-align: center;
@@ -379,6 +422,23 @@ a {
   color: #ffffff;
 }
 
+@media (min-width: 660px) {
+  .catalog {
+    width: 640px;
+    margin: 0 auto;
+  }
+  .catalog__list  {
+    width: 640px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .catalog__item {
+    width: 300px;
+  }
+}
+
 .my-order {
   display: block;
   width: auto;
@@ -396,4 +456,10 @@ a {
 .my-order__number {
   margin: 0;
   display: none;
+}
+
+@media (min-width: 960px) {
+  .my-order {
+    width: 240px;
+  }
 }
