--- a/css/style.css
+++ b/css/style.css
@@ -179,21 +179,21 @@ a {
 }
 
 
-@media (min-width: 960px) {
+@media (min-width: 1200px) {
   .page-header__wrapper {
-    width: 650px;
+    width: 960px;
     padding: 0;
   }
   .main-nav__wrapper {
-    width: 960px;
+    width: 1329px;
   }
 
   .main-nav__list {
-    width: 650px;
+    width: 680px;
   }
 
   .page-header__logo {
-    left: 305px;
+    left: 320px;
   }
 
   .page-header__person {
@@ -207,19 +207,20 @@ a {
     font-size: 15px;
     left: -170px;
   }
+
   .site-list__item {
     display: block;
     padding: 26px 10px;
   }
+
   .page-main__columns {
-    width: 1200px;
+    width: 1700px;
     display: flex;
     margin: 0 auto;
   }
   .page-main__columns--left {
-    width: 960px;
+    width: 1400px;
   }
-
 }
 
 .order {
@@ -305,6 +306,37 @@ a {
     margin: 0;
   }
 }
+@media (min-width: 1200px) {
+  .order__container  {
+    width: 850px;
+    top: 551px;
+    padding-bottom: 60px;
+    padding-top: 19px;
+    margin: 0;
+    position: relative;
+  }
+  .order__about {
+    position: absolute;
+    background-color: #313131;
+    color: #ffffff;
+    font-size: 12px;
+    text-transform: uppercase;
+    right: 738px;
+    top: 623px;
+  }
+
+  .order__about-link {
+    display: block;
+    padding: 89px 98px;
+    margin: 0;
+    color: #ffffff;
+  }
+
+  .order__title-container {
+    margin-left: 206px;
+    padding-top: 4px;
+  }
+}
 
 .categories {
   font-size: 18px;
@@ -318,19 +350,24 @@ a {
   margin: 0 auto;
   width: 264px;
 }
+
 .categories__item {
   margin-bottom: 24px;
 }
+
 .categories__link {
   color: #000000;
 }
+
 .categories__link--active {
   color: #D62323;
 }
+
 .categories__link:hover,
 .categories__link:focus {
   color: #D62323;
 }
+
 .categories__link:active {
   color: #D62323;
 }
@@ -353,6 +390,25 @@ a {
     padding-top: 35px;
   }
 }
+
+@media (min-width: 1200px) {
+  .categories__list {
+    width: 1200px;
+    height: 75px;
+    padding: 0;
+    flex-direction: row;
+  }
+
+  .categories__item {
+    margin-bottom: 0;
+    padding: 32px 0;
+  }
+
+  .categories__item:first-child {
+    margin-left: 176px;
+  }
+}
+
 
 .catalog {
   width: 320px;
@@ -427,6 +483,7 @@ a {
     width: 640px;
     margin: 0 auto;
   }
+  
   .catalog__list  {
     width: 640px;
     display: flex;
@@ -436,6 +493,16 @@ a {
 
   .catalog__item {
     width: 300px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .catalog {
+    width: 1400px;
+  }
+
+  .catalog__list {
+    width: 1400px;
   }
 }
 
@@ -458,8 +525,8 @@ a {
   display: none;
 }
 
-@media (min-width: 960px) {
+@media (min-width: 1200px) {
   .my-order {
-    width: 240px;
+    width: 300px;
   }
 }
