--- a/css/style.css
+++ b/css/style.css
@@ -562,3 +562,87 @@ a {
     left: 5px;
   }
 }
+
+.modal {
+  width: 300px;
+  padding: 0;
+  margin: 0 auto;
+  background-color: #ffffff;
+  font-size: 15px;
+}
+
+.modal__image {
+  display: block;
+  text-align: center;
+  margin-top: 80px;
+  margin-bottom: 24px;
+}
+
+.modal__description {
+  width: auto;
+  margin: 0;
+  padding: 0;
+  background-color: #E8EAED;
+}
+
+.modal__description-container {
+  width: 300px;
+  padding: 40px 10px;
+}
+
+.modal__title {
+  margin: 0;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.modal__title-weight {
+  opacity: 0.4;
+}
+
+.modal__list {
+  width: 251px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.modal__item {
+  margin: 0;
+  margin-bottom: 32px;
+}
+
+.modal__item-title {
+  margin: 0;
+  line-height: 21px;
+  font-size: 15px;
+  opacity: 0.4;
+  margin-bottom: 16px;
+}
+
+.modal__item-text {
+  font-size: 15px;
+  margin: 0;
+}
+
+.modal__value-list {
+  width: 251px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.value__list-number {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.value__list-text {
+  font-size: 12px;
+  opacity: 0.4;
+  margin: 0;
+}
